squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-parse_test-newlines.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
local_names:
  - - vargv
    - 0
num_locals: 1
upvalues: []
is_varargs: true
body:
  data:
    Block:
      - data:
          IfElse:
            - data:
                Literal:
                  Integer: 1
              span:
                start: Start
                end: End
            - data:
                Block:
                  - data:
                      Expr:
                        data:
                          FunctionCall:
                            func:
                              FieldAccess:
                                - data: Globals
                                  span:
                                    start: Start
                                    end: End
                                - - print
                                  - start: Start
                                    end: End
                            args:
                              - data:
                                  Literal:
                                    String: "Yes"
                                span:
                                  start: Start
                                  end: End
                        span:
                          start: Start
                          end: End
                    span:
                      start: Start
                      end: End
              span:
                start: Start
                end: End
            - data: Empty
              span:
                start: Start
                end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - test
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionDef:
                      keyword_span:
                        start: Start
                        end: End
                      arg_span:
                        start: Start
                        end: End
                      num_args: 3
                      default_expr: []
                      local_names:
                        - - a
                          - 0
                        - - b
                          - 1
                        - - c
                          - 2
                      num_locals: 3
                      upvalues: []
                      is_varargs: false
                      body:
                        data:
                          Block:
                            - data:
                                Expr:
                                  data:
                                    FunctionCall:
                                      func:
                                        FieldAccess:
                                          - data: Globals
                                            span:
                                              start: Start
                                              end: End
                                          - - print
                                            - start: Start
                                              end: End
                                      args:
                                        - data:
                                            Local:
                                              - 0
                                              - start: Start
                                                end: End
                                          span:
                                            start: Start
                                            end: End
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                            - data:
                                Expr:
                                  data:
                                    FunctionCall:
                                      func:
                                        FieldAccess:
                                          - data: Globals
                                            span:
                                              start: Start
                                              end: End
                                          - - print
                                            - start: Start
                                              end: End
                                      args:
                                        - data:
                                            Local:
                                              - 1
                                              - start: Start
                                                end: End
                                          span:
                                            start: Start
                                            end: End
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                            - data:
                                Expr:
                                  data:
                                    FunctionCall:
                                      func:
                                        FieldAccess:
                                          - data: Globals
                                            span:
                                              start: Start
                                              end: End
                                          - - print
                                            - start: Start
                                              end: End
                                      args:
                                        - data:
                                            Local:
                                              - 2
                                              - start: Start
                                                end: End
                                          span:
                                            start: Start
                                            end: End
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                        span:
                          start: Start
                          end: End
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Block:
            - data:
                Expr:
                  data:
                    Assign:
                      target:
                        Ident:
                          - a
                          - start: Start
                            end: End
                      value:
                        data:
                          Literal:
                            Integer: 1
                        span:
                          start: Start
                          end: End
                      kind: NewSlot
                      op_span:
                        start: Start
                        end: End
                  span:
                    start: Start
                    end: End
              span:
                start: Start
                end: End
            - data:
                Expr:
                  data:
                    Assign:
                      target:
                        Ident:
                          - b
                          - start: Start
                            end: End
                      value:
                        data:
                          Literal:
                            Integer: 2
                        span:
                          start: Start
                          end: End
                      kind: NewSlot
                      op_span:
                        start: Start
                        end: End
                  span:
                    start: Start
                    end: End
              span:
                start: Start
                end: End
            - data:
                Expr:
                  data:
                    Assign:
                      target:
                        Ident:
                          - c
                          - start: Start
                            end: End
                      value:
                        data:
                          Literal:
                            Integer: 3
                        span:
                          start: Start
                          end: End
                      kind: NewSlot
                      op_span:
                        start: Start
                        end: End
                  span:
                    start: Start
                    end: End
              span:
                start: Start
                end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      Literal:
                        String: "\n"
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - a
                    - start: Start
                      end: End
                value:
                  data:
                    BinaryOp:
                      op: Add
                      op_span:
                        start: Start
                        end: End
                      lhs:
                        data:
                          BinaryOp:
                            op: Add
                            op_span:
                              start: Start
                              end: End
                            lhs:
                              data:
                                Literal:
                                  Integer: 1
                              span:
                                start: Start
                                end: End
                            rhs:
                              data:
                                Literal:
                                  Integer: 5
                              span:
                                start: Start
                                end: End
                        span:
                          start: Start
                          end: End
                      rhs:
                        data:
                          Literal:
                            Integer: 6
                        span:
                          start: Start
                          end: End
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      Ident: a
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      Literal:
                        String: "\n"
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - TestClass
                    - start: Start
                      end: End
                value:
                  data:
                    ClassDef:
                      parent: ~
                      members:
                        - - data:
                              Literal:
                                String: test
                            span:
                              start: Start
                              end: End
                          - data:
                              Literal:
                                Integer: 1
                            span:
                              start: Start
                              end: End
                        - - data:
                              Literal:
                                String: test2
                            span:
                              start: Start
                              end: End
                          - data:
                              Literal:
                                Integer: 2
                            span:
                              start: Start
                              end: End
                        - - data:
                              Literal:
                                String: test3
                            span:
                              start: Start
                              end: End
                          - data:
                              FunctionDef:
                                keyword_span:
                                  start: Start
                                  end: End
                                arg_span:
                                  start: Start
                                  end: End
                                num_args: 0
                                default_expr: []
                                local_names: []
                                num_locals: 0
                                upvalues: []
                                is_varargs: false
                                body:
                                  data:
                                    Block: []
                                  span:
                                    start: Start
                                    end: End
                            span:
                              start: Start
                              end: End
                        - - data:
                              Literal:
                                String: test4
                            span:
                              start: Start
                              end: End
                          - data:
                              FunctionDef:
                                keyword_span:
                                  start: Start
                                  end: End
                                arg_span:
                                  start: Start
                                  end: End
                                num_args: 0
                                default_expr: []
                                local_names: []
                                num_locals: 0
                                upvalues: []
                                is_varargs: false
                                body:
                                  data:
                                    Block: []
                                  span:
                                    start: Start
                                    end: End
                            span:
                              start: Start
                              end: End
                      ctx:
                        class_kw_span:
                          start: Start
                          end: End
                        class_body_span:
                          start: Start
                          end: End
                        extends_kw_ty_span: ~
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
  span:
    start: Start
    end: End
