squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-squirrel_repo-fibonacci.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
locals:
  - NamedReg: vargv
  - NamedReg: n
is_varargs: true
body:
  data:
    Block:
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - fib
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionDef:
                      keyword_span:
                        start: Start
                        end: End
                      arg_span:
                        start: Start
                        end: End
                      num_args: 1
                      default_expr: []
                      locals:
                        - NamedReg: n
                      is_varargs: false
                      body:
                        data:
                          Block:
                            - data:
                                IfElse:
                                  - data:
                                      BinaryOp:
                                        op: Less
                                        op_span:
                                          start: Start
                                          end: End
                                        lhs:
                                          data:
                                            Local:
                                              - 0
                                              - start: Start
                                                end: End
                                          span:
                                            start: Start
                                            end: End
                                        rhs:
                                          data:
                                            Literal:
                                              Integer: 2
                                          span:
                                            start: Start
                                            end: End
                                    span:
                                      start: Start
                                      end: End
                                  - data:
                                      Return:
                                        data:
                                          Literal:
                                            Integer: 1
                                        span:
                                          start: Start
                                          end: End
                                    span:
                                      start: Start
                                      end: End
                                  - data: Empty
                                    span:
                                      start: Start
                                      end: End
                              span:
                                start: Start
                                end: End
                            - data:
                                Return:
                                  data:
                                    BinaryOp:
                                      op: Add
                                      op_span:
                                        start: Start
                                        end: End
                                      lhs:
                                        data:
                                          FunctionCall:
                                            func:
                                              Expr:
                                                data:
                                                  Ident: fib
                                                span:
                                                  start: Start
                                                  end: End
                                            args:
                                              - data:
                                                  BinaryOp:
                                                    op: Sub
                                                    op_span:
                                                      start: Start
                                                      end: End
                                                    lhs:
                                                      data:
                                                        Local:
                                                          - 0
                                                          - start: Start
                                                            end: End
                                                      span:
                                                        start: Start
                                                        end: End
                                                    rhs:
                                                      data:
                                                        Literal:
                                                          Integer: 2
                                                      span:
                                                        start: Start
                                                        end: End
                                                span:
                                                  start: Start
                                                  end: End
                                        span:
                                          start: Start
                                          end: End
                                      rhs:
                                        data:
                                          FunctionCall:
                                            func:
                                              Expr:
                                                data:
                                                  Ident: fib
                                                span:
                                                  start: Start
                                                  end: End
                                            args:
                                              - data:
                                                  BinaryOp:
                                                    op: Sub
                                                    op_span:
                                                      start: Start
                                                      end: End
                                                    lhs:
                                                      data:
                                                        Local:
                                                          - 0
                                                          - start: Start
                                                            end: End
                                                      span:
                                                        start: Start
                                                        end: End
                                                    rhs:
                                                      data:
                                                        Literal:
                                                          Integer: 1
                                                      span:
                                                        start: Start
                                                        end: End
                                                span:
                                                  start: Start
                                                  end: End
                                        span:
                                          start: Start
                                          end: End
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                        span:
                          start: Start
                          end: End
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 1
                    - start: Start
                      end: End
                value:
                  data:
                    Ternary:
                      cond:
                        data:
                          BinaryOp:
                            op: NotEq
                            op_span:
                              start: Start
                              end: End
                            lhs:
                              data:
                                FunctionCall:
                                  func:
                                    FieldAccess:
                                      - data:
                                          Local:
                                            - 0
                                            - start: Start
                                              end: End
                                        span:
                                          start: Start
                                          end: End
                                      - - len
                                        - start: Start
                                          end: End
                                  args: []
                              span:
                                start: Start
                                end: End
                            rhs:
                              data:
                                Literal:
                                  Integer: 0
                              span:
                                start: Start
                                end: End
                        span:
                          start: Start
                          end: End
                      true_expr:
                        data:
                          FunctionCall:
                            func:
                              FieldAccess:
                                - data:
                                    ArrayAccess:
                                      array:
                                        data:
                                          Local:
                                            - 0
                                            - start: Start
                                              end: End
                                        span:
                                          start: Start
                                          end: End
                                      index:
                                        data:
                                          Literal:
                                            Integer: 0
                                        span:
                                          start: Start
                                          end: End
                                  span:
                                    start: Start
                                    end: End
                                - - tointeger
                                  - start: Start
                                    end: End
                            args: []
                        span:
                          start: Start
                          end: End
                      false_expr:
                        data:
                          Literal:
                            Integer: 1
                        span:
                          start: Start
                          end: End
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: print
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            FunctionCall:
                              func:
                                Expr:
                                  data:
                                    Ident: fib
                                  span:
                                    start: Start
                                    end: End
                              args:
                                - data:
                                    Local:
                                      - 1
                                      - start: Start
                                        end: End
                                  span:
                                    start: Start
                                    end: End
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
  span:
    start: Start
    end: End
